app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <fields>
        <fullName>AccountGeography__c</fullName>
        <label>AccountGeography</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountIndustryCategory__c</fullName>
        <label>AccountIndustryCategory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber</fullName>
    </fields>
    <fields>
        <fullName>AccountRegionalBoss__c</fullName>
        <label>AccountRegionalBoss</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSource</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountTagLine__c</fullName>
        <label>AccountTagLine</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnnualRevenue</fullName>
    </fields>
    <fields>
        <fullName>Backup_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Backup External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Unique_Id__c</fullName>
        <label>Backup Unique Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddress</fullName>
    </fields>
    <fields>
        <fullName>ChannelProgramLevelName</fullName>
    </fields>
    <fields>
        <fullName>ChannelProgramName</fullName>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DandbCompanyId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description</fullName>
    </fields>
    <fields>
        <fullName>DunsNumber</fullName>
    </fields>
    <fields>
        <fullName>Fax</fullName>
    </fields>
    <fields>
        <fullName>Industry</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsCustomerPortal</fullName>
    </fields>
    <fields>
        <fullName>IsExcludedFromRealign</fullName>
    </fields>
    <fields>
        <fullName>IsPartner</fullName>
    </fields>
    <fields>
        <fullName>Jigsaw</fullName>
    </fields>
    <fields>
        <fullName>MetaDataTest__c</fullName>
        <description>This field is only used to testing metaData functionality</description>
        <label>MetaDataTest</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NaicsCode</fullName>
    </fields>
    <fields>
        <fullName>NaicsDesc</fullName>
    </fields>
    <fields>
        <fullName>Name</fullName>
    </fields>
    <fields>
        <fullName>NumberOfEmployees</fullName>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ownership</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ParentId</fullName>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Phone</fullName>
        <inlineHelpText>Phone Description</inlineHelpText>
    </fields>
    <fields>
        <fullName>Rating</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingAddress</fullName>
    </fields>
    <fields>
        <fullName>Sic</fullName>
    </fields>
    <fields>
        <fullName>SicDesc</fullName>
    </fields>
    <fields>
        <fullName>Site</fullName>
    </fields>
    <fields>
        <fullName>TickerSymbol</fullName>
    </fields>
    <fields>
        <fullName>Tradestyle</fullName>
    </fields>
    <fields>
        <fullName>Type</fullName>
        <inlineHelpText>Type Description</inlineHelpText>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website</fullName>
    </fields>
    <fields>
        <fullName>YearStarted</fullName>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>