app/main/default/objects/Account/fields/AccountGeography__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>AccountGeography__c</fullName>
        <label>AccountGeography</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>