app/main/default/objects/Account/fields/AccountIndustryCategory__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>AccountIndustryCategory__c</fullName>
        <label>AccountIndustryCategory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>