app/main/default/objects/Account/fields/AccountRegionalBoss__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>AccountRegionalBoss__c</fullName>
        <label>AccountRegionalBoss</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>