app/main/default/objects/Account/fields/AccountTagLine__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>AccountTagLine__c</fullName>
        <label>AccountTagLine</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>