app/main/default/objects/Account/fields/Backup_External_Id__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Backup_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Backup External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>