app/main/default/objects/Account/fields/MetaDataTest__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>MetaDataTest__c</fullName>
        <description>This field is only used to testing metaData functionality</description>
        <label>MetaDataTest</label>
        <length>225</length>
        <type>Text</type>
    </fields>
</CustomObject>