app/main/default/objects/Account/fields/NumberofLocations__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>