app/main/default/objects/Account/fields/SLAExpirationDate__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
</CustomObject>