app/main/default/objects/Account/fields/SLASerialNumber__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>