app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
</CustomObject>