app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
</CustomObject>